Estilado de caja de videos y fondo bp1, 2 y 3

--- a/css/bp1.styl
+++ b/css/bp1.styl
@@ -93,6 +93,19 @@ section
 	margin -.6em .0
 	padding .6em 0
 
+.materiales
+	.video
+		background rgba(white,.8)
+		border-radius 5px
+		box-shadow 0 2px 7px rgba(black,.3)
+		display inline-block
+		margin 0 0 1em 5%
+		padding 2em 0 .5em 0 
+		vertical-align top
+		width 90%
+		&:nth-child(odd)
+			margin 0 0 1em 5%
+
 
 
 
