--- a/css/bp3.styl
+++ b/css/bp3.styl
@@ -247,3 +247,19 @@ section
 	max-width 1000px
 	position absolute
 	top 0px
+
+.materiales
+	.video
+		background rgba(white,.8)
+		border-radius 5px
+		box-shadow 0 2px 7px rgba(black,.3)
+		display inline-block
+		margin 0
+		padding 2em 0 .5em 0 
+		vertical-align top
+		width 45%
+		&:nth-child(odd)
+			margin 0 1em 1em 3.5%
+		p
+			font-size 3em
+
