--- a/css/estilos.styl
+++ b/css/estilos.styl
@@ -141,20 +141,20 @@ article
 				right .6em
 				top .3em
 	.materiales
-		background claro
-		border-bottom 1px solid borde
-		border-top 1px solid borde
-		margin 1em 0 3em 0 
-		padding 3.5em 3.5em 2em 3.5em
+		// background claro
+		// border-bottom 1px solid borde
+		// border-top 1px solid borde
+		// margin 1em 0 3em 0 
+		// padding 3.5em 3.5em 2em 3.5em
 		.video
 		.libro
 			p
+				color azul
 				font-family mayuscula
-				font-size 1.3em
+				font-size 1.1em
 				letter-spacing -2px
 		.video
 			.contenedor
-				box-shadow 0 0 5px rgba(black,.5)
 				height 0
 				overflow hidden
 				padding-bottom 56.25%
@@ -168,16 +168,23 @@ article
 					width 100%
 		.libro
 			display inline-block
-			margin 0
-			width 45%
-			&:last-child
-				margin 0
-			&:nth-child(even)
-				margin 0
+			// margin 0
+			// width 45%
+			// &:last-child
+			// 	margin 0
+			// &:nth-child(even)
+			// 	margin 0
 			img
 				display block
 				height auto
-				width 10em
+				width 7em
+
+article#video
+	background #dbe6ea
+	background-image url(../img/paisaje1.jpg)
+	background-repeat no-repeat
+	background-position bottom left
+	background-size 100% auto 
 
 body 
 	background fondo
