Cambio colores de base

--- a/css/bp3.styl
+++ b/css/bp3.styl
@@ -1,3 +1,5 @@
+body
+	position relative
 
 header
 	height 220px
@@ -242,13 +244,32 @@ nav
 					background rgba(black,.05)
 
 section
-	bottom 0px
 	left 325px
 	max-width 1000px
 	position absolute
 	top 0px
 
 .materiales
+	.libro
+		background rgba(white,.8)
+		border-radius 5px
+		box-shadow 0 2px 7px rgba(black,.3)
+		display inline-block
+		margin 0
+		padding 2em 1em .5em 1em 
+		vertical-align top
+		width 20%
+		&:nth-child(odd)
+			margin 0 1em 1em 3.5%
+		img
+				display block
+				height auto
+				margin 0 auto
+				width 7em
+		p
+			font-size 3em
+			margin .5em 0 0 0
+			white-space nowrap	
 	.video
 		background rgba(white,.8)
 		border-radius 5px
@@ -262,4 +283,6 @@ section
 			margin 0 1em 1em 3.5%
 		p
 			font-size 3em
+			margin .5em 0 0 1em
+
 
