--- a/css/estilos.styl
+++ b/css/estilos.styl
@@ -9,8 +9,10 @@ fondo = #edf1f3
 borde = rgb(198,207,211)
 boton = rgba(111,129,148, .5)
 hover = rgba(0,0,0,.7)
-azul = #3b84bf
-gris = #343434
+// azul = #1880fc
+azul = #1880fc
+// gris = #343434
+gris = #515151
 claro = #ebf0f4
 
 @font-face {
@@ -78,7 +80,9 @@ article
 	// box-shadow: 0 0 6px rgba(0,0,0,0.2);
 	box-shadow: 0 2px 2px rgba(0,0,0,0.3);
 	margin 1em
-	padding 0 0 1em 0
+	padding 0 0 2em 0
+	&:last-child
+		margin-bottom 4.5em
 	.encabezado
 		margin 0 0 1em 0
 		.iniciando
@@ -179,12 +183,12 @@ article
 				height auto
 				width 7em
 
-article#video
-	background #dbe6ea
-	background-image url(../img/paisaje1.jpg)
-	background-repeat no-repeat
-	background-position bottom left
-	background-size 100% auto 
+// article#video
+// 	background #dbe6ea
+// 	background-image url(../img/paisaje1.jpg)
+// 	background-repeat no-repeat
+// 	background-position bottom left
+// 	background-size 100% auto 
 
 body 
 	background fondo
