Estilado final videos en todas las vistas

--- a/css/bp3.styl
+++ b/css/bp3.styl
@@ -132,6 +132,7 @@ nav
 					background gris
 			.ejercicio
 				&:after
+					color rgba(azul,.7)
 					content "\e603"
 					font-family icono
 					font-size 1.2em
@@ -167,6 +168,7 @@ nav
 					background rgba(black,.05)
 			.oro
 				&:after
+					color rgba(azul,.7)
 					content "\e604"
 					font-family icono
 					font-size 1.2em
@@ -250,39 +252,11 @@ section
 	top 0px
 
 .materiales
-	.libro
-		background rgba(white,.8)
-		border-radius 5px
-		box-shadow 0 2px 7px rgba(black,.3)
-		display inline-block
-		margin 0
-		padding 2em 1em .5em 1em 
-		vertical-align top
-		width 20%
-		&:nth-child(odd)
-			margin 0 1em 1em 3.5%
-		img
-				display block
-				height auto
-				margin 0 auto
-				width 7em
-		p
-			font-size 3em
-			margin .5em 0 0 0
-			white-space nowrap	
 	.video
-		background rgba(white,.8)
-		border-radius 5px
-		box-shadow 0 2px 7px rgba(black,.3)
-		display inline-block
-		margin 0
-		padding 2em 0 .5em 0 
-		vertical-align top
 		width 45%
 		&:nth-child(odd)
 			margin 0 1em 1em 3.5%
-		p
-			font-size 3em
-			margin .5em 0 0 1em
+			width 45%
+
 
 
