--- a/css/bp1.styl
+++ b/css/bp1.styl
@@ -95,16 +95,13 @@ section
 
 .materiales
 	.video
-		background rgba(white,.8)
-		border-radius 5px
-		box-shadow 0 2px 7px rgba(black,.3)
-		display inline-block
-		margin 0 0 1em 5%
-		padding 2em 0 .5em 0 
-		vertical-align top
-		width 90%
 		&:nth-child(odd)
-			margin 0 0 1em 5%
+			margin 1em 5% 
+			width 90%
+		&:nth-child(even)
+			margin 1em 5% 
+			width 90%
+
 
 
 
