--- a/css/bp2.styl
+++ b/css/bp2.styl
@@ -127,16 +127,10 @@ section
 
 .materiales
 	.video
-		background rgba(white,.8)
-		border-radius 5px
-		box-shadow 0 2px 7px rgba(black,.3)
-		display inline-block
-		margin 0 1em 1em 3%
-		padding 2em 0 .5em 0 
-		vertical-align top
 		width 45%
 		&:nth-child(odd)
-			margin 0 0 1em 3%
+			margin 0 3% 1em 3%
+			width 45%
 
 .fixed 
 	box-shadow 0 2px 2px rgba(azul,.5)
