--- a/css/estilos.css
+++ b/css/estilos.css
@@ -46,7 +46,7 @@ article .encabezado .libro:before {
   top: 0.3em;
 }
 article .encabezado .numero {
-  background: #1880fc;
+  background: #2480e2;
   color: #edf1f3;
   float: left;
   font-family: lucida grande;
@@ -63,7 +63,7 @@ article .encabezado .numero {
 }
 article .encabezado .numero:after {
   border-top: solid 0 transparent;
-  border-left: solid 0.7em #1880fc;
+  border-left: solid 0.7em #2480e2;
   border-bottom: solid 1.8em transparent;
   border-right: solid 0 transparent;
   content: "";
@@ -87,12 +87,29 @@ article .encabezado .video:before {
   right: 0.6em;
   top: 0.3em;
 }
+article .materiales {
+  background: #ebf0f4;
+  border-bottom: 1px solid #c6cfd3;
+  border-top: 1px solid #c6cfd3;
+  margin: 1em 0 3em 0;
+  padding: 1em 0 0 0;
+}
 article .materiales .video p,
 article .materiales .libro p {
-  color: #1880fc;
+  color: rgba(81,81,81,0.8);
   font-family: lucida grande;
   font-size: 1.1em;
-  letter-spacing: -2px;
+  letter-spacing: -1px;
+}
+article .materiales .video {
+  background: #fff;
+  border: 1px solid rgba(81,81,81,0.3);
+  border-radius: 5px;
+  box-shadow: 0 2px 0 rgba(0,0,0,0.3);
+  display: inline-block;
+  padding: 2em 0 0.5em 0;
+  vertical-align: top;
+  width: 45%;
 }
 article .materiales .video .contenedor {
   height: 0;
@@ -107,6 +124,42 @@ article .materiales .video .contenedor iframe {
   position: absolute;
   top: 0;
   width: 100%;
+}
+article .materiales .detalles {
+  padding: 0.5em 0.5em;
+}
+article .materiales .detalles .autor {
+  color: #515151;
+  display: inline-block;
+  float: left;
+  font-size: 0.7em;
+  font-weight: bold;
+  margin: 0 0 0.5em 18px;
+  vertical-align: top;
+  width: 45%;
+}
+article .materiales .detalles .fecha {
+  color: rgba(81,81,81,0.4);
+  display: inline-block;
+  font-size: 0.7em;
+  margin: 0 0 0.5em 0.5em;
+  vertical-align: top;
+  width: 45%;
+}
+article .materiales .detalles .resumen {
+  display: inline-block;
+  font-size: 0.8em;
+  margin: -0.2em 1.5em 0.5em 1.5em;
+  vertical-align: top;
+}
+article .materiales .detalles .titulo {
+  border-bottom: 1px solid #c6cfd3;
+  color: #2480e2;
+  font-family: lucida grande;
+  font-size: 1.2em;
+  letter-spacing: -1px;
+  margin: 0 0 1em 0;
+  padding: 0.2em;
 }
 article .materiales .libro {
   display: inline-block;
@@ -143,11 +196,11 @@ h2 {
   font-family: lucida grande;
   font-weight: normal;
   font-size: 2em;
-  letter-spacing: -3px;
+  letter-spacing: -2px;
   margin: 0.5em 0 0.5em 0;
 }
 h3 {
-  color: #1880fc;
+  color: #2480e2;
   font-family: lucida grande;
   font-weight: normal;
   letter-spacing: -2px;
@@ -356,7 +409,7 @@ p:first-child {
     display: block;
   }
   nav ul li .capitulo {
-    background: #1880fc;
+    background: #2480e2;
     border-radius: 5px;
     color: #ebf0f4;
     margin: 1.2em 0 1.3em 1em;
@@ -368,6 +421,7 @@ p:first-child {
     background: #515151;
   }
   nav ul li .ejercicio:after {
+    color: rgba(36,128,226,0.7);
     content: "\e603";
     font-family: icono;
     font-size: 1.2em;
@@ -380,7 +434,7 @@ p:first-child {
     background: rgba(0,0,0,0.05);
   }
   nav ul li .iniciando:after {
-    color: rgba(24,128,252,0.7);
+    color: rgba(36,128,226,0.7);
     content: "\e605";
     font-family: icono;
     font-size: 1.2em;
@@ -393,7 +447,7 @@ p:first-child {
     background: rgba(0,0,0,0.05);
   }
   nav ul li .libro:after {
-    color: rgba(24,128,252,0.7);
+    color: rgba(36,128,226,0.7);
     content: "\e600";
     font-family: icono;
     font-size: 1.1em;
@@ -406,6 +460,7 @@ p:first-child {
     background: rgba(0,0,0,0.05);
   }
   nav ul li .oro:after {
+    color: rgba(36,128,226,0.7);
     content: "\e604";
     font-family: icono;
     font-size: 1.2em;
@@ -420,7 +475,7 @@ p:first-child {
   nav ul li .solo {
     border: 1px solid rgba(111,129,148,0.5);
     border-radius: 5px;
-    color: #1880fc;
+    color: #2480e2;
     margin: 0 0 0.2em 1em;
     padding: 0.4em 1.5em 0.4em 1em;
     position: relative;
@@ -433,7 +488,7 @@ p:first-child {
   nav ul li .uno:after {
     background: #ebf0f4;
     border-radius: 50%;
-    color: #1880fc;
+    color: #2480e2;
     content: "1";
     font-family: arial;
     font-size: 0.9em;
@@ -449,7 +504,7 @@ p:first-child {
     color: #515151;
   }
   nav ul li .video:after {
-    color: rgba(24,128,252,0.7);
+    color: rgba(36,128,226,0.7);
     content: "\e601";
     font-family: icono;
     font-size: 1.1em;
@@ -473,14 +528,14 @@ p:first-child {
     border-bottom: none;
   }
   nav ul ul a {
-    color: #1880fc;
+    color: #2480e2;
     padding: 0.4em 1.5em 0.4em 1em;
     position: relative;
     transition: all 0.2s ease;
     -webkit-transition: all 0.2s ease;
   }
   nav ul ul a:after {
-    color: rgba(24,128,252,0.7);
+    color: rgba(36,128,226,0.7);
     content: "\e613";
     font-family: icono2;
     font-size: 1.2em;
@@ -498,46 +553,12 @@ p:first-child {
     position: absolute;
     top: 0px;
   }
-  .materiales .libro {
-    background: rgba(255,255,255,0.8);
-    border-radius: 5px;
-    box-shadow: 0 2px 7px rgba(0,0,0,0.3);
-    display: inline-block;
-    margin: 0;
-    padding: 2em 1em 0.5em 1em;
-    vertical-align: top;
-    width: 20%;
-  }
-  .materiales .libro:nth-child(odd) {
-    margin: 0 1em 1em 3.5%;
-  }
-  .materiales .libro img {
-    display: block;
-    height: auto;
-    margin: 0 auto;
-    width: 7em;
-  }
-  .materiales .libro p {
-    font-size: 3em;
-    margin: 0.5em 0 0 0;
-    white-space: nowrap;
-  }
   .materiales .video {
-    background: rgba(255,255,255,0.8);
-    border-radius: 5px;
-    box-shadow: 0 2px 7px rgba(0,0,0,0.3);
-    display: inline-block;
-    margin: 0;
-    padding: 2em 0 0.5em 0;
-    vertical-align: top;
     width: 45%;
   }
   .materiales .video:nth-child(odd) {
     margin: 0 1em 1em 3.5%;
-  }
-  .materiales .video p {
-    font-size: 3em;
-    margin: 0.5em 0 0 1em;
+    width: 45%;
   }
 }
 @media screen and (max-width: 992px) {
@@ -550,7 +571,7 @@ p:first-child {
     width: 80px;
   }
   footer {
-    background: #1880fc;
+    background: #2480e2;
     height: 10em;
   }
   footer .avatar {
@@ -673,8 +694,8 @@ p:first-child {
     padding: 0.6em 0 2em 0;
   }
   #mm0 {
-    background: #1880fc;
-    border: 0.5px solid rgba(24,128,252,0.05);
+    background: #2480e2;
+    border: 0.5px solid rgba(36,128,226,0.05);
     color: #fff;
     cursor: pointer;
     font-size: 1.5em;
@@ -684,20 +705,14 @@ p:first-child {
     width: 109%;
   }
   .materiales .video {
-    background: rgba(255,255,255,0.8);
-    border-radius: 5px;
-    box-shadow: 0 2px 7px rgba(0,0,0,0.3);
-    display: inline-block;
-    margin: 0 1em 1em 3%;
-    padding: 2em 0 0.5em 0;
-    vertical-align: top;
     width: 45%;
   }
   .materiales .video:nth-child(odd) {
-    margin: 0 0 1em 3%;
+    margin: 0 3% 1em 3%;
+    width: 45%;
   }
   .fixed {
-    box-shadow: 0 2px 2px rgba(24,128,252,0.5);
+    box-shadow: 0 2px 2px rgba(36,128,226,0.5);
     left: 0px;
     position: fixed;
     right: 0px;
@@ -706,7 +721,7 @@ p:first-child {
 }
 @media screen and (max-width: 630px) {
   footer {
-    background: #1880fc;
+    background: #2480e2;
     height: 10em;
   }
   footer .avatar {
@@ -812,17 +827,12 @@ p:first-child {
     margin: -0.6em 0;
     padding: 0.6em 0;
   }
-  .materiales .video {
-    background: rgba(255,255,255,0.8);
-    border-radius: 5px;
-    box-shadow: 0 2px 7px rgba(0,0,0,0.3);
-    display: inline-block;
-    margin: 0 0 1em 5%;
-    padding: 2em 0 0.5em 0;
-    vertical-align: top;
+  .materiales .video:nth-child(odd) {
+    margin: 1em 5%;
     width: 90%;
   }
-  .materiales .video:nth-child(odd) {
-    margin: 0 0 1em 5%;
+  .materiales .video:nth-child(even) {
+    margin: 1em 5%;
+    width: 90%;
   }
 }
