Estilado final libros en todas las vistas

--- a/css/bp1.styl
+++ b/css/bp1.styl
@@ -1,4 +1,26 @@
 
+article
+	margin 1em .5em
+	padding 0 0 1em 0
+	&:last-child
+		margin-bottom 1em
+	.materiales_libro
+		.libros
+			.ejemplar
+				padding 0 0 0 1.5em
+				.detalles
+					left 8.5em
+				.portada
+					width 28%
+		.guias
+			.ejemplar
+				padding 0 0 0 1.5em
+				.detalles
+					left 8.5em
+				.portada
+					margin 0 1em 2em 0
+					width 28%
+
 footer
 	background azul
 	height 10em
@@ -88,19 +110,25 @@ footer
 			&:hover
 				color #f6ca2d
 
+p
+	line-height 1.4
+	margin .5em .7em
+	&:first-child 
+		margin -1em .7em 0 .7em
+
 section
 	background #e4e1df
 	margin -.6em .0
 	padding .6em 0
 
-.materiales
+.materiales_video
 	.video
 		&:nth-child(odd)
-			margin 1em 5% 
-			width 90%
+			margin 1em 3% 
+			width 95%
 		&:nth-child(even)
-			margin 1em 5% 
-			width 90%
+			margin 1em 3% 
+			width 95%
 
 
 
