--- a/css/bp3.styl
+++ b/css/bp3.styl
@@ -1,3 +1,4 @@
+
 body
 	position relative
 
@@ -251,11 +252,11 @@ section
 	position absolute
 	top 0px
 
-.materiales
+.materiales_video
 	.video
 		width 45%
 		&:nth-child(odd)
-			margin 0 1em 1em 3.5%
+			margin 0 1em 0 3.5%
 			width 45%
 
 
