Mejoras generales de estilo

--- a/css/bp1.styl
+++ b/css/bp1.styl
@@ -124,10 +124,10 @@ section
 .materiales_video
 	.video
 		&:nth-child(odd)
-			margin 1em 3% 
+			margin .5em 3% 
 			width 95%
 		&:nth-child(even)
-			margin 1em 3% 
+			margin .5em 3% 
 			width 95%
 
 
