Añadido hero efecto parallax
hero fijo en movil

--- a/css/bp2.styl
+++ b/css/bp2.styl
@@ -18,11 +18,29 @@ article
 					width 12%
 
 header
-	margin 0 0 1em 0
+	height 0
+	overflow hidden
+	padding-bottom 165px
+	padding-top 20px
+	position relative
+	h1
+		color claro
+		text-shadow 2px 2px 0 gris
+		small
+			color claro
+			text-shadow 2px 2px 0 gris
 	img
 		display block
-		margin 1em auto 0 auto
+		margin  0 auto
 		width 80px
+	.hero
+		height 100%
+		left -3em
+		margin 0 auto
+		position absolute
+		top 0
+		width 120%
+		z-index -1
 
 footer
 	background azul
