--- a/css/estilos.styl
+++ b/css/estilos.styl
@@ -294,12 +294,7 @@ article
 				padding 0 0 1em 0
 		// .guias
 
-// article#video
-// 	background #dbe6ea
-// 	background-image url(../img/paisaje1.jpg)
-// 	background-repeat no-repeat
-// 	background-position bottom left
-// 	background-size 100% auto 
+
 
 body 
 	background fondo
@@ -314,7 +309,7 @@ h1
 	margin 0 
 	text-align center
 	small
-		border-top 1px solid borde
+		// border-top 1px solid borde
 		color gris
 		display block
 		font-size .39em;
