--- a/css/estilos.css
+++ b/css/estilos.css
@@ -281,7 +281,6 @@ h1 {
   text-align: center;
 }
 h1 small {
-  border-top: 1px solid #c6cfd3;
   color: #515151;
   display: block;
   font-size: 0.39em;
@@ -386,18 +385,51 @@ p:first-child {
   body {
     position: relative;
   }
+  h1 {
+    color: #fff;
+    display: inline-block;
+    font-family: lobster, sans-serif;
+    font-size: 2.5em;
+    font-weight: normal;
+    left: 35px;
+    margin: 0 0 0 2.2em;
+    position: absolute;
+    text-shadow: 2px 2px 0 #515151;
+    top: 15px;
+  }
+  h1 small {
+    border-top: none;
+    color: #fff;
+    display: inline-block;
+    font-size: 0.5em;
+    left: 5px;
+    line-height: -5em;
+    position: absolute;
+    top: 40px;
+    white-space: nowrap;
+  }
   header {
-    height: 220px;
+    background-attachment: fixed;
+    background-image: url("../img/hero.jpg");
+    background-position: center 50px;
+    background-repeat: no-repeat;
+    background-size: 100% auto;
+    height: 100px;
     left: 0px;
-    padding: 1em 0 0 0;
-    position: fixed;
     top: 0px;
-    width: 325px;
+    width: 100%;
+    z-index: 15;
+    -webkit-filter: brightness(0.95);
   }
   header img {
-    display: block;
-    margin: 0.5em auto;
-    width: 100px;
+    left: 1.2em;
+    height: auto;
+    position: relative;
+    top: 1.2em;
+    width: 80px;
+  }
+  header .hero {
+    display: none;
   }
   footer {
     background: #ebf0f4;
@@ -504,8 +536,8 @@ p:first-child {
     bottom: 50px;
     left: 0px;
     overflow-y: auto;
-    position: fixed;
-    top: 225px;
+    position: relative;
+    top: 20px;
     width: 325px;
   }
   nav ul {
@@ -662,7 +694,7 @@ p:first-child {
     left: 325px;
     max-width: 1000px;
     position: absolute;
-    top: 0px;
+    top: 105px;
   }
   .materiales_video .video {
     width: 45%;
@@ -673,6 +705,12 @@ p:first-child {
   }
   .materiales_video .video:last-child {
     margin: -1em 1em 0 3.5%;
+  }
+  .fijo {
+    left: 0px;
+    position: fixed;
+    right: 0px;
+    top: 20px;
   }
 }
 @media screen and (max-width: 992px) {
@@ -692,12 +730,33 @@ p:first-child {
     width: 12%;
   }
   header {
-    margin: 0 0 1em 0;
+    height: 0;
+    overflow: hidden;
+    padding-bottom: 165px;
+    padding-top: 20px;
+    position: relative;
+  }
+  header h1 {
+    color: #ebf0f4;
+    text-shadow: 2px 2px 0 #515151;
+  }
+  header h1 small {
+    color: #ebf0f4;
+    text-shadow: 2px 2px 0 #515151;
   }
   header img {
     display: block;
-    margin: 1em auto 0 auto;
+    margin: 0 auto;
     width: 80px;
+  }
+  header .hero {
+    height: 100%;
+    left: -3em;
+    margin: 0 auto;
+    position: absolute;
+    top: 0;
+    width: 120%;
+    z-index: -1;
   }
   footer {
     background: #2480e2;
