Varios retoques de estilo

--- a/css/bp2.styl
+++ b/css/bp2.styl
@@ -24,11 +24,9 @@ header
 	padding-top 20px
 	position relative
 	h1
-		color claro
-		text-shadow 2px 2px 0 gris
+		text-align center
 		small
-			color claro
-			text-shadow 2px 2px 0 gris
+		color red
 	img
 		display block
 		margin  0 auto
