--- a/css/estilos.styl
+++ b/css/estilos.styl
@@ -294,8 +294,6 @@ article
 				padding 0 0 1em 0
 		// .guias
 
-
-
 body 
 	background fondo
 	color gris
@@ -303,19 +301,20 @@ body
 	font-size 15px
 
 h1
-	font-size 3em;
+	color claro
+	display block
 	font-family titulo
+	font-size 2.5em
 	font-weight normal
 	margin 0 
-	text-align center
+	text-shadow 1px 1px 0 gris
 	small
-		// border-top 1px solid borde
-		color gris
+		color claro
 		display block
-		font-size .39em;
-		line-height -5em
-		margin .1em auto 0 auto 
+		font-size .5em
+		margin -.2em auto 0 auto
 		max-width 17em
+		text-shadow 1px 1px 0 gris
 
 h2
 	display inline-block
