--- a/css/bp3.styl
+++ b/css/bp3.styl
@@ -5,18 +5,12 @@ body
 h1
 	color white
 	display inline-block
-	font-family titulo
 	font-size 2.5em;
-	font-weight normal
-	left 35px
-	margin 0 0 0 2.2em
+	left 3em
 	position absolute
-	text-shadow 2px 2px 0 gris
-	top 15px
+	top .4em
 	small
-		border-top none
 		color white
-		display inline-block
 		font-size .5em;
 		left 5px
 		line-height -5em
