Estabilizando comportamiento del hero en todas las vistas

--- a/css/bp1.styl
+++ b/css/bp1.styl
@@ -21,6 +21,7 @@ article
 					margin 0 1em 2em 0
 					width 28%
 
+
 footer
 	background azul
 	height 10em
@@ -109,6 +110,11 @@ footer
 				content "\e602"
 			&:hover
 				color #f6ca2d
+
+header
+	.hero
+		left -12em
+		width auto
 
 p
 	line-height 1.4
