--- a/css/bp3.styl
+++ b/css/bp3.styl
@@ -5,13 +5,13 @@ body
 h1
 	color white
 	display inline-block
-	font-size 2.5em;
+	font-size 2.5em
 	left 3em
 	position absolute
 	top .4em
 	small
 		color white
-		font-size .5em;
+		font-size .5em
 		left 5px
 		line-height -5em
 		position absolute
@@ -23,13 +23,12 @@ header
 	background-image url(../img/hero.jpg)
 	background-position center 50px
 	background-repeat no-repeat
-	background-size  100% auto 
+	background-size  100% auto
 	height 100px
 	left 0px
 	top 0px
 	width 100%
 	z-index 15
-	-webkit-filter brightness(.95)
 	img 
 		left 1.2em
 		height auto
