--- a/css/estilos.styl
+++ b/css/estilos.styl
@@ -393,13 +393,19 @@ p
 @media screen and (min-width: 1250px) 
 	@import "bp4.styl"
 
-@media screen and (min-width: 992px) 
+@media screen and (min-width: 929px) 
 	@import "bp3.styl"
 
 
-@media screen and (max-width: 992px) 
+@media screen and (max-width: 929px) 
 	@import "bp2.styl"
 
 
 @media screen and (max-width: 641px) 
 	@import "bp1.styl"
+
+@media screen and (max-width: 430px) 
+	@import "bp0.styl"
+
+
+
