--- a/css/bp2.styl
+++ b/css/bp2.styl
@@ -20,24 +20,23 @@ article
 header
 	height 0
 	overflow hidden
-	padding-bottom 165px
+	padding-bottom 150px
 	padding-top 20px
 	position relative
 	h1
 		text-align center
-		small
-		color red
+
 	img
 		display block
 		margin  0 auto
 		width 80px
 	.hero
 		height 100%
-		left -3em
+		left -6em
 		margin 0 auto
 		position absolute
 		top 0
-		width 120%
+		width auto
 		z-index -1
 
 footer
