--- a/css/estilos.css
+++ b/css/estilos.css
@@ -383,7 +383,7 @@ p:first-child {
     width: 40%;
   }
 }
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 929px) {
   body {
     position: relative;
   }
@@ -415,7 +415,6 @@ p:first-child {
     top: 0px;
     width: 100%;
     z-index: 15;
-    -webkit-filter: brightness(0.95);
   }
   header img {
     left: 1.2em;
@@ -709,7 +708,7 @@ p:first-child {
     top: 20px;
   }
 }
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 929px) {
   article:last-child {
     margin-bottom: 0;
   }
@@ -728,14 +727,12 @@ p:first-child {
   header {
     height: 0;
     overflow: hidden;
-    padding-bottom: 165px;
+    padding-bottom: 150px;
     padding-top: 20px;
     position: relative;
   }
   header h1 {
     text-align: center;
-small
-    color: #f00;
   }
   header img {
     display: block;
@@ -744,11 +741,11 @@ small
   }
   header .hero {
     height: 100%;
-    left: -3em;
+    left: -6em;
     margin: 0 auto;
     position: absolute;
     top: 0;
-    width: 120%;
+    width: auto;
     z-index: -1;
   }
   footer {
@@ -1032,6 +1029,10 @@ small
   footer .social .email:hover {
     color: #f6ca2d;
   }
+  header .hero {
+    left: -12em;
+    width: auto;
+  }
   p {
     line-height: 1.4;
     margin: 0.5em 0.7em;
@@ -1052,4 +1053,6 @@ small
     margin: 0.5em 3%;
     width: 95%;
   }
+}
+@media screen and (max-width: 430px) {
 }
